--- a/css/styles.css
+++ b/css/styles.css
@@ -21,11 +21,11 @@ body {
   font-family: Arial, sans-serif;
 }
 
-#modal-container {
+/* #modal-container {
     display: none;
-  }
+  } */
 
-#modal-container.is-visible {
+/* #modal-container.is-visible {
   position: fixed;
   padding: 20px;
   box-sizing: border-box;
@@ -33,20 +33,20 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.5); */
   
   /* to show it above other content */
-  z-index: 999; 
+  /* z-index: 999;  */
   
   /* to allow scrolling if the screen is not high enough*/
-  overflow: auto; 
+  /* overflow: auto;  */
   
   /* this is used to center the modal */
-  display: grid;
-  text-align: center;
+  /* display: grid;
+  text-align: center; */
 }
 
-.modal {
+/* .modal {
   margin: auto;
   display: inline-block;
   box-sizing: border-box;
@@ -55,16 +55,16 @@ body {
   width: 100%;
   max-width: 700px;
   text-align: left;
-}
+} */
 
-.modal-close {
+/* .modal-close {
   float: right;
   -webkit-appearance: none;
   border: 0;
   background: none;
   color: #777;
   text-decoration: underline;
-}
+} */
 
 .modal h1 {
   text-align: center;
